--- a/app/views/base_login.html
+++ b/app/views/base_login.html
@@ -28,7 +28,7 @@
         {% block conteudo %}
         <div class="container">
             <div class="form">
-                <form action="../views/base_sistema.html">
+                <form action="../views/anuncio.html">
                     <div class="form-header">
                         <div class="title">
                             <h1>Login</h1>
